# AIWrite

./: .env.example  .gitignore  AIWRITE_CORE_REBUILD.md  AIWRITE_FROM_SCRATCH.md  AIWRITE_PROJECT_BOOK.md  AI_DEV_PROMPT.md  PAPER_AI_EDITOR_KICKOFF.md  README.md  _人事管理系统.yaml  pyproject.toml  人事管理系统.yaml  图书管理系统 (1).docx
aiwrite/: __init__.py  __main__.py  cli.py  tui.py
aiwrite/config/: __init__.py  settings.py
aiwrite/diagram/: __init__.py  mermaid.py
aiwrite/llm/: __init__.py  base.py  providers.py  vision.py
aiwrite/models/: __init__.py  paper.py  pipeline.py
aiwrite/pipeline/: __init__.py  executor.py  init_step.py  steps.py
aiwrite/prompts/: __init__.py  templates.py
aiwrite/render/: __init__.py  latex.py  word.py
aiwrite/utils/: __init__.py  excel.py
examples/: education_system.yaml  hrm_system.yaml  library_system.yaml  outline_input.yaml  test_full_flow.yaml  test_outline.yaml  test_outline_input.txt  test_with_images.yaml
examples/images/: 功能需求表.xls  学生表.xls  成绩表.xls  教师表.xls  用户表.xls  课程表.xls  选课表.xls
examples/img1/: 借阅记录表 BorrowRecord.xls  图书表 Book.xls  用户表 User.xls  读者信息表 Reader.xls
output/人事管理系统/: 人事管理系统.docx  人事管理系统.tex
tests/: __init__.py  test_hrm_init.py  test_init.py  test_mermaid.py  test_vision.py
